--- a/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj
+++ b/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj
@@ -138,6 +138,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="GameTImer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="GameTImer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
