d3dUtil.h done. This file include sone utility functions.

--- a/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj
+++ b/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj
@@ -138,10 +138,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="d3dUtil.h" />
+    <ClInclude Include="d3dx12.h" />
+    <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="GameTImer.h" />
     <ClInclude Include="MathHelper.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="GameTImer.cpp" />
     <ClCompile Include="MathHelper.cpp" />
   </ItemGroup>
