--- a/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj.filters
+++ b/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="DDSTextureLoader.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="d3dUtil.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
