--- a/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj.filters
+++ b/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="DDSTextureLoader.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="d3dapp.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameTImer.cpp">
