--- a/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj.filters
+++ b/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="d3dapp.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TC.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameTImer.cpp">
@@ -48,6 +51,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="d3dapp.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Test_Main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TC.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
