--- a/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj.filters
+++ b/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="UploadBuffer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FrameResource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameTImer.cpp">
