--- a/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj
+++ b/DXD12_FRAMEWORK/DXD12_FRAMEWORK.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="FrameResource.h" />
     <ClInclude Include="GameTImer.h" />
+    <ClInclude Include="GeometryGenerator.h" />
     <ClInclude Include="MathHelper.h" />
     <ClInclude Include="TC.h" />
     <ClInclude Include="UploadBuffer.h" />
@@ -152,8 +153,11 @@
     <ClCompile Include="d3dapp.cpp" />
     <ClCompile Include="d3dUtil.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
+    <ClCompile Include="FrameResource.cpp" />
     <ClCompile Include="GameTImer.cpp" />
+    <ClCompile Include="GeometryGenerator.cpp" />
     <ClCompile Include="MathHelper.cpp" />
+    <ClCompile Include="ShapeApp.cpp" />
     <ClCompile Include="TC.cpp" />
     <ClCompile Include="Test_Main.cpp" />
   </ItemGroup>
